# tests-sos

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README  autogen.sh  configure.ac
test/apps/: Makefile.am
test/performance/shmem_perf_suite/: bi_dir_ctx.h  common.h
test/shmemx/: Makefile.am  c11_test_shmem_ibget.c  c11_test_shmem_ibput.c  cxx_test_shmem_ibget.cpp  cxx_test_shmem_ibput.cpp  ex_scan.c  in_scan.c  query_initialized.c  scan_in_place.c  signal_add.c  signal_set.c
test/spec-example/: Makefile.am
test/unit/: Makefile.am  collect.c  cxx_shmem_test_all.c  fadd_nbi.c  mt_membar.c  nop_collectives.c  query_initialized.c  repeated_syncs.c  self_collectives.c  shmem_team_get_config.c  shmem_team_split_2d.c  spam.c  to_all.c
